         distribute missing macro files (Sergio).
20160501 doc/libspectrum.3: bump more version numbers for 1.2.0 release
         (Sergio).
20160503 accessor.pl,doc/libspectrum.txt,sna.c,snap_accessors.txt,snapshot.c,
         szx.c,z80.c: add skeleton of support for Currah uSource snapshots
         (patch #363) (Fred and Sergio).
20160508 szx.c: use Opus flags when writing chunk (Sergio).
20160511 accessor.pl,doc/libspectrum.txt,sna.c,snap_accessors.txt,snapshot.c,
         szx.c,z80.c: add skeleton of support for DISCiPLE snapshots (patch
         #365) (Fred).
20160514 accessor.pl,doc/libspectrum.txt,sna.c,snap_accessors.txt,snapshot.c,
         szx.c,z80.c: add skeleton of support for Didaktik 80 MDOS 1 snapshots
         (patch #364) (Fred).
20160521 szx.c: reset uncompressed size when loading Opus and +D custom ROM
         (from patch #366) (Sergio).
20160529 README,doc/libspectrum.3: update release dates (Fred).
20160529 configure.ac: mark this release as 1.2.0-pre1 (Fred).
20160530 doc/libspectrum.txt: list more disk formats (Sergio).
20160606 ChangeLog,README,configure.ac,doc/libspectrum.3: update release dates
         and mark this release as 1.2.0 (Fred).
20160622 make-perl.c,myglib/garray.c: add implementations of
         g_array_sized_new() and g_array_remove_index_fast() (thanks, Sergio)
         (Phil).
20160709 ChangeLog,README,configure.ac,doc/{libspectrum.3,libspectrum.txt}: 
         bump some version numbers for 1.2.1 release (Fred).
20160710 README,Makefile.am,configure.ac,doc/libspectrum.3: bump release dates,
         mark release as 1.2.1-pre1 and bump libtool version (Fred).
20160712 Makefile.am: add comments on assigning libtool version (thanks, Sergio)
         (Fred).
20160717 ChangeLog,README,configure.ac,doc/libspectrum.3: update release dates
         and mark this release as 1.2.1 (Fred).
20160719 myglib/ghash.c: mark g_direct_hash() as static as it isn't used outside
         of ghash.c and isn't in a header (Fred).