@@ -29,5 +29,6 @@ test_return_t check_edges( const char *filename, test_edge_sequence_t *edges,
 			   int flags_mask );
 
 test_return_t test_15( void );
+test_return_t test_28( void );
 
 #endif
