@@ -1085,3 +1085,7 @@ hacking/ChangeLog: the small scale changelog for libspectrum
          and mark this release as 1.2.1 (Fred).
 20160719 myglib/ghash.c: mark g_direct_hash() as static as it isn't used outside
          of ghash.c and isn't in a header (Fred).
+20160721 tape.c,tape_block.c,test/{Makefile.am,test.[ch],test15.c->test_edges.c,
+         zero-tail.pzx}: fix handling of 0 length tail pulses after PZX data
+         blocks and ensure the first PZX pulse block pulse is marked as high or
+         low level as required (Fred).
